--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header {
     width: 100vw;
 }
  /* ---------------NAVBAR-----------------*/
+
 .navbar {
     background-color: #3E6064;
     padding: 50px;
@@ -26,7 +27,6 @@ header {
     width: 100%;
     height: 40px;
 }
-
 
 .navbar a {
     color: #BBD6C2;
@@ -47,6 +47,7 @@ header {
 }
 
 .navbar .menu-burger {
+    display: none;
     position: absolute;
     width: 35px;
     top: 50px;
@@ -97,8 +98,6 @@ header {
     width: 25%;
 }
 
-    
-
 /* ---------------Main-----------------*/
 
 h1 {
@@ -107,38 +106,17 @@ h1 {
     margin-bottom: 55px;
 }
 
-main .scrool {
+.scrool {
     display: flex;
     justify-content: center;
     justify-content: space-between;
 }
-main .scrool #box #name {
+.scrool #box #name {
     border: 1px solid black;
     height: 300px;
     width: 200px;
 }
 
-.scrool {
-    display: flex;
-    overflow: hidden;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    scroll-behavior: smooth;
-}
-
-.ensemble-fleche {
-    width: 700px;
-    min-width: 700px;
-    display: flex;
-    margin: auto;
-}
-::-webkit-scrollbar {
-    display: none;
-}
-#fleche {
-    height: 20px;
-    width: 20px;
-}
 .card {
     margin: 15px;
     display: flex;
@@ -150,7 +128,6 @@ main .scrool #box #name {
 }
 
 
-
 /* ---------------ARTICLE-----------------*/
 
 article {
@@ -158,9 +135,11 @@ article {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    box-sizing: border-box;
 }
 
 #article  {
+    box-sizing:content-box;
     margin-top: 90px;
     width: 90%;
     height: 650px;
@@ -227,22 +206,30 @@ article {
     color: #3E6064;
 }
 
-
 #titre img {
     height: 50px;
 }
 
 /* ---------------COMMENTAIRES-----------------*/
 
-
+article {
+    box-sizing: border-box;
+}
 
 #commentaire {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    box-sizing: border-box;
+    display: block;
     width: 90%;
     margin-top: 90px;
     background-color: #bbd6c267;
+}
+
+#commentaire #com {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-size: 20px; 
+    box-sizing: content-box;
 }
 
 #commentaire h2 {
@@ -253,9 +240,7 @@ article {
     font-size: xx-large;
 }
 
-
 #commentaire #com #p {
-    display: block;
     width: 25%;
     height: 200px;
     margin: 25px;
@@ -264,18 +249,134 @@ article {
     background-color: #718275c8;
     border-radius: 20px;
     color: #fff;
-
 }
 
 #com #p p {
     padding-bottom: 30px;
 }
-#commentaire #com {
-    display: flex;
-    justify-content: space-between;
-    font-size: 20px;
-    margin: 0 50px;
-}
+
+/* ---------------RECETTE-----------------*/
+
+#p2 {
+    padding-top: 35px;
+  }
+  
+  #menu  {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  
+  }
+  
+  #menu #carte {
+      margin-bottom: 70px;
+  
+  }
+  
+  #day {
+      grid-area: 1 / 1 / 2 / 3;
+      color: #3E6064;
+      font-size: xx-large;
+      padding-top: 55px;
+      padding-left: 55px;
+  }
+  
+  #day1 {
+      grid-area: 1 / 1 / 2 / 3;
+      color: #3E6064;
+      font-size: xx-large;
+      padding-top: 55px;
+      padding-left: 55px;
+  }
+  
+  #day2 {
+      grid-area: 1 / 1 / 2 / 3;
+      color: #3E6064;
+      font-size: xx-large;
+      padding-top: 55px;
+      padding-left: 55px;
+  }
+  
+  #day3 {
+      grid-area: 1 / 1 / 2 / 3;
+      color: #3E6064;
+      font-size: xx-large;
+      padding-top: 55px;
+      padding-left: 55px;
+  }
+  
+  #day4 {
+      grid-area: 1 / 1 / 2 / 3;
+      color: #3E6064;
+      font-size: xx-large;
+      padding-top: 55px;
+      padding-left: 55px;
+  }
+  
+  
+  #carte {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+      grid-column-gap: 0px;
+      grid-row-gap: 0px; 
+      background-color: #bbd6c292; 
+      width:80%;
+      height: 550px;
+  
+  }
+  
+  #img2{
+      grid-area: 2 / 1 / 5 / 3;
+  }
+  
+  #img2 img {
+      width: 150px;
+      height: 170px;  
+      padding-left: 70px;
+      padding-bottom: 100px;
+  }
+  
+  #recette {
+      grid-area: 1 / 3 / 5 / 5;
+      
+  }
+  
+  #recette h2 {
+    padding-top: 80px;  
+    padding-bottom: 10px;
+  }
+  
+  #recette #etp {
+      margin: 0 30px;
+      box-sizing: border-box;
+      padding-right: 10px;
+  }
+  
+  #recette #etp1 {
+      margin: 0 30px;
+      box-sizing: border-box;
+      padding-right: 10px;
+  }
+  
+  #recette #etp2 {
+      margin: 0 30px;
+      box-sizing: border-box;
+      padding-right: 10px;
+  }
+  
+  #recette #etp3 {
+      margin: 0 30px;
+      box-sizing: border-box;
+      padding-right: 10px;
+  }
+  
+  #recette #etp4 {
+      margin: 0 30px;
+      box-sizing: border-box;
+      padding-right: 10px;
+  }
+  
 
 /* ---------------FOOTER-----------------*/
 
@@ -304,174 +405,11 @@ padding-left: 375px;
 
 }
 
-/* ---------------PAGES 2-----------------*/
-
-#p2 {
-  padding-top: 35px;
-}
-
-#menu  {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-
-}
-
-#menu #carte {
-    margin-bottom: 70px;
-
-}
-
-#day {
-    color: #3E6064;
-    font-size: xx-large;
-    padding-top: 55px;
-    padding-left: 55px;
-}
-
-#carte {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px; 
-    background-color: #bbd6c292; 
-    width:80%;
-    height: 550px;
-    
-
-}
-
-#day{
-    grid-area: 1 / 1 / 2 / 3;
-}
-
-#img2{
-    grid-area: 2 / 1 / 5 / 3;
-  
-
-}
-
-#img2 img {
-    width: 150px;
-    height: 170px;  
-    padding-left: 70px;
-    padding-bottom: 100px;
-}
-
-#recette {
-    grid-area: 1 / 3 / 5 / 5;
-    
-}
-
-#recette h2 {
-  padding-top: 80px;  
-}
-
-#recette #etp {
-    padding-top: 100px;
-}
-
-/* ---------------Engagements-----------------*/
-
-
-
-#parent {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-}
-
-#eng {
-    font-size: x-large;
-    color: #e1dad0;
-}
-
-#parent #imgg {
-    position: relative;
-    left: 150px;
-    bottom: 200px;
-    width: 300px;
-    height: 300px;
-}
-
-#engagement1 {
-    grid-area: 1 / 3 / 2 / 4;
-    text-align: center;
-    background-color: #6b877d;
-    -webkit-box-shadow: 0px 0px 16px 0px rgba(76,76,76,0.48); 
-    box-shadow: 0px 0px 16px 0px rgba(76,76,76,0.48);
-    margin: 250px;
-    padding-top: 30px;
-    height: 400px;
-    width: 400px;
-}
-
-#engagement2 {
-    grid-area: 2 / 2 / 3 / 3;
-    text-align: center;
-    background-color: #6e8073;
-    -webkit-box-shadow: 0px 0px 16px 0px rgba(76,76,76,0.48); 
-    box-shadow: 0px 0px 16px 0px rgba(76,76,76,0.48);
-    margin: 80px;
-    padding-top: 30px;
-    height: 200px;
-    width: 200px
-
-}
-
-#engagement3 {
-    grid-area: 2 / 4 / 3 / 5;
-    text-align: center;
-    background-color: #6e8073;
-    -webkit-box-shadow: 0px 0px 16px 0px rgba(76,76,76,0.48); 
-    box-shadow: 0px 0px 16px 0px rgba(76,76,76,0.48);
-    margin: 80px;
-    padding-top: 30px;
-    height: 200px;
-    width: 200px
-}
-
-
-#engagement4 {
-    grid-area: 3 / 2 / 5 / 3;
-    text-align: center;
-    background-color: #6b877d;;
-    -webkit-box-shadow: 0px 0px 16px 0px rgba(76,76,76,0.48); 
-    box-shadow: 0px 0px 16px 0px rgba(76,76,76,0.48);
-    padding-top: 30px;
-    margin: 80px;
-    height: 200px;
-    width: 200px
-}
-
-#engagement5 {
-    grid-area: 3 / 4 / 5 / 5;
-    text-align: center;
-    background-color: #6e8073;
-    -webkit-box-shadow: 0px 0px 16px 0px rgba(76,76,76,0.48); 
-    box-shadow: 0px 0px 16px 0px rgba(76,76,76,0.48);
-    padding-top: 30px;
-    margin: 80px;
-    height: 200px;
-    width: 200px
-}
-
-
-
-
 /* ---------------Responsive-----------------*/
 
-/* navbar */
 
-@media screen and (min-width: 1300px) and (max-width:780px) {
-    .menu-burger {
-        display: none;
-    }
-}
+@media (max-width: 768px) {
+
     .navbar {
         padding: 0;
     }
@@ -481,12 +419,11 @@ padding-left: 375px;
         left: 30px;
     }
     
-
     .nav-links {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #522f2f;
+        background-color: #818181;
         backdrop-filter: blur(7px);
         width: 100%;
         height: 300vh;
@@ -494,6 +431,7 @@ padding-left: 375px;
         left: 0;
         margin-left: -100%;
         transition: all 0.5s ease;
+        position: absolute;
     }
     
     .nav-links.mobile-menu {
@@ -518,36 +456,38 @@ padding-left: 375px;
         font-size: 2em;
     }
 
-
-
-
 /* header */
 
     #img   {
         position: relative;
         width: 100%;
-        height: 80%;
+        height: 80px;
     }
 
     #button a {
         position: absolute;
         text-align: center;
     }
-
-
+}
 /* Main */
+
+@media (max-width: 800px){
 
     .scrool {
         display: flex;
         flex-wrap: wrap;
     }
 
-    #photo {
-        position: relative;
-        display: none;
-        
-    }
+}
 
+/*article*/
+
+@media (max-width: 1257px) {
+
+     #photo {
+        display: none;
+    }
+  
     #article {
         height: 900px;
         display: flex;
@@ -559,18 +499,53 @@ padding-left: 375px;
         font-size: 20px;
         justify-content: center;
     }
-
-
+}
 
 /* commentaire */
 
-  
-    #commentaire #com {
-        box-sizing: border-box;
-        display: flex;
+@media (max-width: 1100px) {
+
+
+    #commentaire #com { 
+        align-items: center;
         flex-direction: column;
-        width: 200%;
+
+    }
+
 }
 
-/* Footer */
+@media (max-width: 2000px) {
+
+    
+h1 {
+    text-align: center;
+    color: #3E6064;
+    margin-top: 150px;
+}
+}
+
+
+@media (max-width: 300px) {
+
+    #img {
+        width: 100%;
+        height: 80%;
+    }
+
+    .scroll {
+        display: block;
+        justify-content: center;
+    }
+
+    #article {
+        box-sizing: border-box;
+    }
+
+    #com {
+        width: 40px;
+        font-size: 10px;
+    }
+
+
+}
 
